# Th-gi-c-m-y-t-nh

./: README.md  main2.py  pyproject.toml
Flappy-bird-python-master/Flappy-bird-python-master/: flappy_face.py  flappy_hand.py  jump_flappy.py
cv-k17-chieut4-main/: context_data.py  giaothong.py  image.py  lab1.py  lab2.py  recognine.py  test.py  train_model.py
detecd_car/: main.py  pyproject.toml
deteced_dog/: main.py  pyproject.toml
deteced_dog/camera_lap/: requirements.txt
recognite/: collect_data.py  label_dict.npy  main.py  pyproject.toml  recognite.py  setup_project.py  train_model.py
recognite/__MACOSX/: ._recognite.py
recognite/models/: download_face_dnn_models.py
