[project]
name = "kiwi-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "google-genai>=1.56.0",
    "gradio>=6.2.0",
    "gtts>=2.5.4",
    "numpy>=2.4.0",
    "pip>=25.3",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]